--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
         "php": "^8.0.2",
         "doctrine/dbal": "3.0",
         "guzzlehttp/guzzle": "^7.2",
+        "krafthaus/name-generator": "^1.0",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "pacificdev/laravel_9_preset": "^1.1",
-        "krafthaus/name-generator": "^1.0"
+        "spatie/laravel-sluggable": "^3.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
